--- a/Capstone2/app/src/main/res/layout/activity_password_reminder.xml
+++ b/Capstone2/app/src/main/res/layout/activity_password_reminder.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText17"
+        android:id="@+id/txtEmail"
         android:layout_width="396dp"
         android:layout_height="80dp"
         android:background="#FCE2E2"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button18"
+        android:id="@+id/btnSend"
         android:layout_width="345dp"
         android:layout_height="56dp"
         android:layout_marginStart="30dp"
@@ -86,7 +86,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText17" />
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <Button
         android:id="@+id/button23"
@@ -98,10 +98,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button24" />
+        app:layout_constraintTop_toBottomOf="@+id/btnReminderBack" />
 
     <Button
-        android:id="@+id/button24"
+        android:id="@+id/btnReminderBack"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
@@ -114,5 +114,5 @@
         app:layout_constraintBottom_toTopOf="@+id/button23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button18" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSend" />
 </androidx.constraintlayout.widget.ConstraintLayout>
