--- a/Capstone2/app/src/main/res/layout/activity_travel_vacc_info.xml
+++ b/Capstone2/app/src/main/res/layout/activity_travel_vacc_info.xml
@@ -8,12 +8,12 @@
     tools:context=".travel_vacc_info">
 
     <Button
-        android:id="@+id/button35"
+        android:id="@+id/btnPHome"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:background="@android:color/holo_red_dark"
-        android:text="Back to Login"
+        android:text="Back Home"
         android:textColor="#F8F6F6"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,6 +46,7 @@
         android:layout_height="558dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
