--- a/Capstone2/app/src/main/res/layout/activity_vaccine__info.xml
+++ b/Capstone2/app/src/main/res/layout/activity_vaccine__info.xml
@@ -8,12 +8,12 @@
     tools:context=".Vaccine_Info">
 
     <Button
-        android:id="@+id/button35"
+        android:id="@+id/btnPHome"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:background="@android:color/holo_red_dark"
-        android:text="Back to Login"
+        android:text="Back Home"
         android:textColor="#F8F6F6"
         android:textSize="20sp"
         android:textStyle="bold"
