--- a/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
@@ -5,25 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8F8E8"
-    tools:context=".add_member_form">
+    tools:context=".AddMemberForm">
 
 
     <Button
-        android:id="@+id/button32"
-        android:layout_width="180dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginLeft="117dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginRight="114dp"
-        android:layout_marginBottom="32dp"
-        android:background="#E46791"
-        android:text="Back to Home"
-        android:textColor="#F3F0F0"
-        android:textSize="18sp"
+        android:id="@+id/btnPAddCancel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#76A83A"
+        android:text="@android:string/cancel"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button30" />
 
@@ -42,78 +37,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText21" />
-
-    <Button
-        android:id="@+id/button40"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Logout"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button39"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button36"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:background="#158B18"
-        android:text="Home"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button37"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button37"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Profile"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button38"
-        app:layout_constraintStart_toEndOf="@+id/button36"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button38"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:background="#158B18"
-        android:text="Calender"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button39"
-        app:layout_constraintStart_toEndOf="@+id/button37"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button39"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Map"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button40"
-        app:layout_constraintStart_toEndOf="@+id/button38"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
 
     <EditText
         android:id="@+id/editText19"
@@ -136,14 +59,14 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="32dp"
         android:text="Add New Member"
         android:textColor="#131213"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button37" />
+        app:layout_constraintTop_toBottomOf="@+id/editText19" />
 
     <EditText
         android:id="@+id/editText21"
@@ -178,7 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText22" />
 
     <Button
-        android:id="@+id/button28"
+        android:id="@+id/btnPAddADD"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="37dp"
@@ -227,14 +150,10 @@
         android:id="@+id/button30"
         android:layout_width="171dp"
         android:layout_height="145dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginLeft="110dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginRight="110dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/add_per"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button28" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPAddADD" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
