--- a/Capstone2/app/src/main/res/layout/activity_calender.xml
+++ b/Capstone2/app/src/main/res/layout/activity_calender.xml
@@ -4,65 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Calender">
+    tools:context=".CalendarActivity">
 
     <Button
-        android:id="@+id/button14"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:id="@+id/btnCalendarHome"
+        android:layout_width="200dp"
+        android:layout_height="39dp"
         android:background="#27B32C"
-        android:text="Back to Home"
+        android:text="Home"
         android:textColor="#FAF7F7"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalendarViewRecord"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/btnCalendarViewRecord"
         android:layout_width="285dp"
         android:layout_height="39dp"
-        android:layout_marginBottom="25dp"
         android:background="#27B32C"
         android:text="View Immunization Record"
         android:textColor="#FAF7F7"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button16"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalendarHome"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="254dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="20dp"
-        android:background="#27B32C"
-        android:text="Search near by Clinic"
-        android:textColor="#FAF7F7"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Profile"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <EditText
         android:id="@+id/editText15"
@@ -82,64 +52,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:background="#158B18"
-        android:text="Home"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Calender"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Map"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#158B18"
-        android:text="Logout"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/button14"
-        app:layout_constraintTop_toBottomOf="@+id/button6"
-        tools:layout_editor_absoluteX="30dp" />
+        android:layout_marginTop="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSHomeRecords"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText15" />
 </androidx.constraintlayout.widget.ConstraintLayout>
