--- a/Capstone2/app/src/main/res/layout/activity_create_account.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_account.xml
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.148" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnPersonal"
         android:layout_width="404dp"
         android:layout_height="113dp"
         android:layout_marginTop="36dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnDoctor"
         android:layout_width="411dp"
         android:layout_height="129dp"
         android:layout_marginTop="36dp"
@@ -52,10 +52,10 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPersonal" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnSchool"
         android:layout_width="420dp"
         android:layout_height="130dp"
         android:layout_marginTop="36dp"
@@ -67,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnDoctor" />
 
     <TextView
         android:id="@+id/textView"
@@ -79,14 +79,14 @@
         android:textColor="#3F51B5"
         android:textSize="30sp"
         android:textStyle="normal|bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnPersonal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText9" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnCancel"
         android:layout_width="226dp"
         android:layout_height="69dp"
         android:layout_marginStart="104dp"
@@ -102,5 +102,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSchool" />
 </androidx.constraintlayout.widget.ConstraintLayout>
