--- a/Capstone2/app/src/main/res/layout/activity_create_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_school.xml
@@ -8,6 +8,35 @@
     tools:context=".create_school">
 
 
+        <Button
+            android:id="@+id/btnSchoolCancel"
+            android:layout_width="411dp"
+            android:layout_height="51dp"
+            android:layout_marginBottom="32dp"
+            android:background="#00BCD4"
+            android:text="Cancel"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnCreateSchool"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="407dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:background="#E46791"
+            android:text="Create Account"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_createpass" />
+
         <EditText
             android:id="@+id/editText2"
             android:layout_width="416dp"
@@ -24,20 +53,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="411dp"
-            android:layout_height="51dp"
-            android:layout_marginBottom="40dp"
-            android:background="#00BCD4"
-            android:text="Cancel"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/editText3"
@@ -123,21 +138,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
 
-
-        <Button
-            android:id="@+id/btn_createacc"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="407dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="14dp"
-            android:background="#E46791"
-            android:text="Create Account"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/txt_createpass"
