--- a/Capstone2/app/src/main/res/layout/activity_home_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_home_doctor.xml
@@ -8,16 +8,69 @@
     tools:context=".home_doctor">
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="81dp"
+        android:id="@+id/btnDocLogout"
+        android:layout_width="80dp"
         android:layout_height="72dp"
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
         android:background="#9C27B0"
+        android:text="Logout"
+        android:textColor="#FAF6F6"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button39"
+        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+
+    <Button
+        android:id="@+id/btnDocProfile"
+        android:layout_width="85dp"
+        android:layout_height="72dp"
+        android:background="#9C27B0"
         android:text="Profile"
         android:textColor="#FAF6F6"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/button38"
+        app:layout_constraintStart_toEndOf="@+id/btnDocHome"
+        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+
+    <Button
+        android:id="@+id/btnDocUpdate"
+        android:layout_width="85dp"
+        android:layout_height="72dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="#9C27B0"
+        android:text="Update"
+        android:textColor="#FAF6F6"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button39"
+        app:layout_constraintStart_toEndOf="@+id/btnDocProfile"
+        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+
+    <Button
+        android:id="@+id/btnDocView"
+        android:layout_width="80dp"
+        android:layout_height="72dp"
+        android:background="#9C27B0"
+        android:text="View"
+        android:textColor="#FAF6F6"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button40"
+        app:layout_constraintStart_toEndOf="@+id/btnDocUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+
+    <Button
+        android:id="@+id/btnDocHome"
+        android:layout_width="81dp"
+        android:layout_height="72dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:background="#9C27B0"
+        android:text="Home"
+        android:textColor="#FAF6F6"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button37"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText15" />
 
     <EditText
@@ -46,57 +99,7 @@
         tools:layout_editor_absoluteY="155dp" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:background="#9C27B0"
-        android:text="Home"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="View"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="Update"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="Logout"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/button10"
+        android:id="@+id/btnDHomeInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
@@ -110,7 +113,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/btnDHomeAdd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
@@ -119,12 +122,12 @@
         android:textColor="#F7F3F3"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button12"
+        app:layout_constraintBottom_toTopOf="@+id/btnDHomeRecords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/btnDHomeRecords"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
@@ -133,7 +136,7 @@
         android:textColor="#F7F3F3"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button10"
+        app:layout_constraintBottom_toTopOf="@+id/btnDHomeInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
@@ -149,7 +152,7 @@
         android:layout_marginRight="70dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/doctor_h"
-        app:layout_constraintBottom_toTopOf="@+id/button11"
+        app:layout_constraintBottom_toTopOf="@+id/btnDHomeAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView2" />
