--- a/Capstone2/app/src/main/res/layout/activity_profile_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_doctor.xml
@@ -7,6 +7,23 @@
     android:background="#F1ECFA"
     tools:context=".Profile_doctor">
 
+    <Button
+        android:id="@+id/btnDProfileHome"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="48dp"
+        android:background="#A243B3"
+        android:text="Back Home"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText8"
+        app:layout_constraintVertical_bias="1.0" />
+
     <EditText
         android:id="@+id/editText2"
         android:layout_width="416dp"
@@ -24,46 +41,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="179dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="50dp"
-        android:background="#A243B3"
-        android:text="Vaccine's Info"
-        android:textColor="#F7F5F5"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_createacc"
-        app:layout_constraintTop_toBottomOf="@+id/txt_createmail" />
-
-    <Button
-        android:id="@+id/btn_createacc"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="48dp"
-        android:background="#A243B3"
-        android:text="Back to Home"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText8" />
 
     <TextView
         android:id="@+id/txt_fullname"
