--- a/Capstone2/app/src/main/res/layout/activity_view_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_view_doctor.xml
@@ -7,76 +7,21 @@
     tools:context=".View_doctor">
 
     <Button
-        android:id="@+id/button40"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
+        android:id="@+id/btnDViewBack"
+        android:layout_width="175dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="32dp"
         android:background="#9C27B0"
-        android:text="Logout"
-        android:textColor="#FAF6F6"
+        android:text="Back to Home"
+        android:textColor="#FCFAFA"
+        android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button39"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button36"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:background="#9C27B0"
-        android:text="Home"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button37"
+        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button37"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="Profile"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button38"
-        app:layout_constraintStart_toEndOf="@+id/button36"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button38"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:background="#9C27B0"
-        android:text="Update"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button39"
-        app:layout_constraintStart_toEndOf="@+id/button37"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
-
-    <Button
-        android:id="@+id/button39"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="View"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button40"
-        app:layout_constraintStart_toEndOf="@+id/button38"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
+        app:layout_constraintTop_toBottomOf="@+id/btnDViewUpdate"
+        app:layout_constraintVertical_bias="0.982" />
 
     <EditText
         android:id="@+id/editText19"
@@ -96,49 +41,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button25"
+        android:id="@+id/btnDViewUpdate"
         android:layout_width="175dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:background="#9C27B0"
         android:text="Update Record"
         android:textColor="#FCFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnDViewBack"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button26" />
-
-    <Button
-        android:id="@+id/button26"
-        android:layout_width="175dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="30dp"
-        android:background="#9C27B0"
-        android:text="Back to Home"
-        android:textColor="#FCFAFA"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button25"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button27" />
 
     <Button
         android:id="@+id/button27"
         android:layout_width="288dp"
         android:layout_height="340dp"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="60dp"
         android:text="View Record - Doctor"
-        app:layout_constraintBottom_toTopOf="@+id/button25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -147,6 +70,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="Patient's Immunization Record"
         android:textColor="#131212"
         android:textSize="25sp"
@@ -154,6 +78,6 @@
         app:layout_constraintBottom_toTopOf="@+id/button27"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button38" />
+        app:layout_constraintTop_toBottomOf="@+id/editText19" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
